--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -14,3 +14,25 @@ a {
 main {
     // background-color: $Poseidon-1-hex;
 }
+
+.hero-post {
+    &__image {
+        &--cover {
+            width: 60vw;
+            height: 50vh;
+            aspect-ratio: 16/9;
+            width: auto;
+            // height: 100%;
+
+            img {
+                object-fit: cover;
+                object-position: center;
+                width: 100%;
+                height: 100%;
+                max-width: none;
+                max-height: none;
+                aspect-ratio: auto;
+            }
+        }
+    }
+}
