--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -24,6 +24,15 @@
     &__body {
         margin-left: 0;
     }
+
+    &__tags {
+        margin-left: 0;
+
+        span {
+            margin-left: 0;
+            margin-right: 1rem;
+        }
+    }
 }
 
 .hero-post {
@@ -71,5 +80,13 @@
     @include bp('medium') {
         margin-top: 4rem;
         margin-bottom: 1rem;
+    }
+}
+
+.google-slides {
+    max-width: 100%;
+
+    @include bp('medium') {
+        max-width: none;
     }
 }
