--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -47,19 +47,19 @@
         &--cover {
             margin-bottom: 1rem;
 
-            @include bp('large') {
-                width: auto;
+            // @include bp('large') {
+            //     width: auto;
 
-                img {
-                    object-fit: cover;
-                    object-position: center;
-                    width: 100%;
-                    height: 100%;
-                    max-width: none;
-                    max-height: 85vh;
-                    aspect-ratio: auto;
-                }
-            }
+            //     img {
+            //         object-fit: cover;
+            //         object-position: center;
+            //         width: 100%;
+            //         height: 100%;
+            //         max-width: none;
+            //         max-height: 85vh;
+            //         aspect-ratio: auto;
+            //     }
+            // }
         }
     }
 
@@ -74,6 +74,8 @@
 
 .more-stories {
     &__headline {
+        letter-spacing: -.04em;
+
         @include bp('small') {
             font-size: 3.8rem;
         }
@@ -82,7 +84,7 @@
             margin-top: 4rem;
         }
     }
-    
+
     &__post {
         h3 {
             margin-bottom: 0rem;
