--- a/styles/abstracts/_mixins.scss
+++ b/styles/abstracts/_mixins.scss
@@ -5,9 +5,11 @@
 // https://css-tricks.com/snippets/sass/mixin-manage-breakpoints/
 
 $breakpoints: (
-    'small': 767px,
-    'medium': 992px,
-    'large': 1200px) !default;
+    'xsmall': 375px,
+    'small': 425px,
+    'medium': 768px,
+    'large': 1024px,
+    'xlarge': 1200px) !default;
 
 @mixin bp($breakpoint) {
 
