--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -1,101 +1,114 @@
-.post {
+.container {
+    .header__h2 {
+        font-family: "variex", sans-serif;
+        font-size: 1.6rem;
+        font-weight: 700;
+    }
+  .post {
     &__image {
-        &--cover {
-            width: 100%;
-            // height: 40vh;
-            aspect-ratio: 1500/340;
+      &--cover {
+        width: 100%;
+        // height: 40vh;
+        aspect-ratio: 1500/340;
 
-            img {
-                object-fit: cover;
-                object-position: center;
-                width: 100%;
-                height: 100%;
-                max-width: none;
-                max-height: none;
-                aspect-ratio: auto;
-            }
+        img {
+          object-fit: cover;
+          object-position: center;
+          width: 100%;
+          height: 100%;
+          max-width: none;
+          max-height: none;
+          aspect-ratio: auto;
         }
+      }
+    }
+
+    &__title {
+      margin-bottom: 15px;
+      font-family: "industry", sans-serif;
+      font-size: 2.2rem;
+      font-weight: 600;
     }
 
     &__meta {
-        margin-left: 0;
+      margin-left: 0;
+    }
+
+    &__avatar {
+        .w-12 {
+            width: 2.5rem;
+        }
+        .h-12 {
+            height: 2.5rem;
+        }
     }
 
     &__body {
-        margin-left: 0;
+      margin-left: 0;
+
+      p {
+        margin: 1rem 0;
+      }
     }
 
     &__tags {
-        margin-left: 0;
+      margin-left: 0;
 
-        span {
-            margin-left: 0;
-            margin-right: 1rem;
-        }
+      span {
+        margin-left: 0;
+        margin-right: 0.5rem;
+      }
     }
+  }
 }
 
 .hero-post {
-    display: grid;
+  display: grid;
 
-    @include bp('small') {
-        grid-template-columns: 1fr 33.33333%;
-        gap: 1.5rem;
+  @include bp("small") {
+    grid-template-columns: 1fr 33.33333%;
+    gap: 1.5rem;
+  }
+
+  &__image {
+    &--cover {
+      margin-bottom: 1rem;
     }
+  }
 
-    &__image {
-        &--cover {
-            margin-bottom: 1rem;
+  &__meta {
+    margin-bottom: 16px;
 
-            // @include bp('large') {
-            //     width: auto;
-
-            //     img {
-            //         object-fit: cover;
-            //         object-position: center;
-            //         width: 100%;
-            //         height: 100%;
-            //         max-width: none;
-            //         max-height: 85vh;
-            //         aspect-ratio: auto;
-            //     }
-            // }
-        }
+    h3 {
+      margin-bottom: 0.25rem;
     }
-
-    &__meta {
-        margin-bottom: 1.3rem;
-
-        h3 {
-            margin-bottom: 0.25rem;
-        }
-    }
+  }
 }
 
 .more-stories {
-    &__headline {
-        letter-spacing: -.04em;
+  &__headline {
+    letter-spacing: -0.04em;
 
-        @include bp('small') {
-            font-size: 3.8rem;
-        }
-    
-        @include bp('medium') {
-            margin-top: 4rem;
-        }
+    @include bp("small") {
+      font-size: 3.8rem;
     }
 
-    &__post {
-        h3 {
-            margin-bottom: 0rem;
-        }
+    @include bp("medium") {
+      margin-top: 4rem;
     }
+  }
+
+  &__post {
+    h3 {
+      margin-bottom: 0rem;
+    }
+  }
 }
 
 .google-slides {
-    max-width: 100%;
+  max-width: 100%;
 
-    @include bp('medium') {
-        max-width: none;
-    }
+  @include bp("medium") {
+    max-width: none;
+  }
 }
