styling for full width videos 16:9

--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -1,9 +1,9 @@
 .container {
-    .header__h2 {
-        font-family: "variex", sans-serif;
-        font-size: 1.6rem;
-        font-weight: 700;
-    }
+  .header__h2 {
+    font-family: "variex", sans-serif;
+    font-size: 1.6rem;
+    font-weight: 700;
+  }
   .post {
     &__image {
       &--cover {
@@ -35,12 +35,12 @@
     }
 
     &__avatar {
-        .w-12 {
-            width: 2.5rem;
-        }
-        .h-12 {
-            height: 2.5rem;
-        }
+      .w-12 {
+        width: 2.5rem;
+      }
+      .h-12 {
+        height: 2.5rem;
+      }
     }
 
     &__body {
@@ -82,6 +82,18 @@
     h3 {
       margin-bottom: 0.25rem;
     }
+  }
+}
+
+// youtube videos
+//
+figure.is-type-video {
+  iframe {
+    width: 100%;
+    height: 100%;
+    max-width: none;
+    max-height: none;
+    aspect-ratio: 16 / 9;
   }
 }
 
