type styling in posts

--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -46,6 +46,14 @@
     &__body {
       margin-left: 0;
 
+      h1 {
+          font-family: "industry", sans-serif;
+      }
+
+      h3 {
+        margin-top: 8px;
+      }
+
       p {
         margin: 1rem 0;
       }
