--- a/styles/components/_posts.scss
+++ b/styles/components/_posts.scss
@@ -3,7 +3,12 @@
     font-family: "variex", sans-serif;
     font-size: 1.6rem;
     font-weight: 700;
+
+    a {
+      font-family: "variex", sans-serif;
+    }
   }
+  
   .post {
     &__image {
       &--cover {
@@ -35,6 +40,8 @@
     }
 
     &__avatar {
+      margin-bottom: 8px;
+
       .w-12 {
         width: 2.5rem;
       }
@@ -85,8 +92,6 @@
   }
 
   &__meta {
-    margin-bottom: 16px;
-
     h3 {
       margin-bottom: 0.25rem;
     }
