--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -130,6 +130,10 @@ $fun-summer-woman-5-hex: #77bdd9;
       font-size: 1.1rem;
     }
   }
+
+  time {
+    font-size: 1rem;
+  }
 }
 
 .home-header {
@@ -151,7 +155,6 @@ $fun-summer-woman-5-hex: #77bdd9;
     }
 
     @include bp("small") {
-    //   margin-left: -9px;
       font-size: 2.3rem;
     }
 
@@ -172,6 +175,20 @@ $fun-summer-woman-5-hex: #77bdd9;
   h4 {
     @include bp("medium") {
       // padding-bottom: 7px;
+    }
+  }
+}
+
+.hero-post {
+  .post__time-date {
+    margin-bottom: 0.5rem;
+  }
+}
+
+.more-stories {
+  &__post {
+    .post__time-date {
+      margin-bottom: 0.5rem;
     }
   }
 }
