cta text-align: center;

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -209,6 +209,7 @@ $fun-summer-woman-5-hex: #77bdd9;
 
     .bg-black {
       color: white;
+      text-align: center;
 
       &:hover {
         color: black;
