using @import for typekit
+ fixes busted fonts outside the homepage

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -12,6 +12,7 @@ $fun-summer-woman-3-hex: #1b80bf;
 $fun-summer-woman-4-hex: #1ea4d9;
 $fun-summer-woman-5-hex: #77bdd9;
 
+@import url("https://use.typekit.net/usd2ygm.css");
 @import "abstracts/mixins";
 @import "components/posts";
 
