--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -15,6 +15,7 @@ $fun-summer-woman-5-hex: #77bdd9;
 @import url("https://use.typekit.net/usd2ygm.css");
 @import "abstracts/mixins";
 @import "components/posts";
+@import "components/typography";
 
 // o————————————————————————————————————o Variex —>
 //
