--- a/styles/components/_horizontal-scroll.scss
+++ b/styles/components/_horizontal-scroll.scss
@@ -22,7 +22,7 @@ main.gallery {
 
     img {
       max-width: 100%;
-      height: 1024px;
+      max-height: 1024px;
       padding: 0 1rem;
       object-fit: contain;
     }
