--- a/styles/components/_horizontal-scroll.scss
+++ b/styles/components/_horizontal-scroll.scss
@@ -48,3 +48,41 @@ main.gallery {
     }
   }
 }
+
+.ReactModal__Overlay {
+  display: flex;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+
+  &--after-open{
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.75) !important;
+    backdrop-filter: blur(10px);
+  }
+
+  &--before-close{
+    opacity: 0;
+  }
+}
+
+.modal-content {
+  transition: all 0.5s ease-in-out;
+  transform: scale(0.9);
+  opacity: 0;
+  max-width: 80vw;
+  max-height: 80vh;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+
+  &.modal-open {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  img {
+    outline: none;
+  }
+}
