--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -2,7 +2,7 @@
 @import "abstracts/mixins";
 @import "components/posts";
 @import "components/typography";
-@import "components/horizontal-scroll";
+@import "components/gallery";
 
 /* Color Theme Swatches in Hex */
 $Poseidon-1-hex: #012030;
@@ -72,6 +72,9 @@ $fun-summer-woman-5-hex: #77bdd9;
 // font-family: "industry", sans-serif;
 // font-weight: 700;
 // font-style: normal;
+
+// o————————————————————————————————————o font styling —>
+// 
 .container {
   padding: 0 0.5rem;
   font-family: "industry", sans-serif;
@@ -183,6 +186,95 @@ $fun-summer-woman-5-hex: #77bdd9;
   }
 }
 
+// o————————————————————————————————————o modals —>
+// 
+.ReactModal__Overlay {
+  display: flex;
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+
+  &--after-open {
+    opacity: 1;
+    background-color: rgba(0, 0, 0, 0.75) !important;
+    backdrop-filter: blur(10px);
+  }
+
+  &--before-close {
+    opacity: 0;
+  }
+}
+
+.modal-content {
+  transition: all 0.5s ease-in-out;
+  transform: scale(0.9);
+  opacity: 0;
+  max-width: 80vw;
+  max-height: 80vh;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
+
+  &.modal-open {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  img {
+    outline: none;
+  }
+}
+
+// o————————————————————————————————————o buttons —>
+// 
+.button-container {
+  display: flex;
+  justify-content: center;
+  gap: 1em;
+  width: 100%;
+  margin: 20px 0;
+}
+
+.button {
+  width: 100%;
+  font-family: "industry", sans-serif;
+  font-size: 1.3rem;
+  font-weight: 500;
+  cursor: pointer;
+
+  &--primary {
+    background-color: deepskyblue;
+    color: white;
+    border: 2px solid deepskyblue;
+    padding: 0.5rem 1rem;
+    border-radius: 0.25rem;
+    transition: all 150ms ease-in-out;
+
+    &:hover {
+      background-color: #fff;
+      color: deepskyblue;
+    }
+  }
+
+  &--half {
+    width: 25%;
+    background-color: #ff4a90;
+    border-color: #ff4a90;
+
+    &:hover {
+      background-color: #fff;
+      color: #ff4a90;
+    }
+  }
+
+  &--gallery {
+    max-width: 20em;
+  }
+}
+
+// o————————————————————————————————————o footer —>
+// 
 .footer {
   &__tag-line {
     width: 100%;
