--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -212,13 +212,21 @@ body * {
   transition: all 0.5s ease-in-out;
   transform: scale(0.9);
   opacity: 0;
-  max-width: 80vw;
-  max-height: 80vh;
+  max-width: 1024px;
+  max-height: 1024px;
   margin: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   outline: none;
+
+  @media (min-width: 1124px) {
+    max-width: 80vw;
+  }
+
+  @media (min-height: 1124px) {
+    max-height: 80vh;
+  }
 
   &.modal-open {
     transform: scale(1);
@@ -301,6 +309,24 @@ button.copy {
     width: 30px;
     height: 30px;
     color: white;
+  }
+}
+
+.copy__msg {
+  position: absolute;
+  right: -14px;
+  margin-top: 100px;
+  font-family: "industry", sans-serif;
+  font-weight: 300;
+  color: white;
+  display: none;
+
+  &.clicked {
+    display: block;
+  }
+
+  p {
+    margin: 0;
   }
 }
 
