--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -258,27 +258,27 @@ body * {
   cursor: pointer;
 
   &--primary {
-    background-color: deepskyblue;
+    background-color: #0078dd;
     color: white;
-    border: 2px solid deepskyblue;
+    border: 2px solid #0078dd;
     padding: 0.5rem 1rem;
     border-radius: 0.25rem;
     transition: all 150ms ease-in-out;
 
     &:hover {
       background-color: #fff;
-      color: deepskyblue;
+      color: #0078dd;
     }
   }
 
   &--half {
     width: 25%;
-    background-color: #ff4a90;
-    border-color: #ff4a90;
+    background-color: #ff002f;
+    border-color: #ff002f;
 
     &:hover {
       background-color: #fff;
-      color: #ff4a90;
+      color: #ff002f;
     }
   }
 
