added placeholder for loading images. super basic

--- a/styles/components/_gallery.scss
+++ b/styles/components/_gallery.scss
@@ -70,5 +70,6 @@ main.gallery {
   margin: 2em 0;
   font-size: 1.3rem;
   font-weight: 500;
-  color: #ff4a90;
+  color: #ff002f;
+  color: gray;
 }
