--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -88,6 +88,14 @@ body * {
     padding: 0 1.25rem;
   }
 
+  @include bp("medium") {
+    max-width: 900px;
+  }
+
+  @include bp("large") {
+    max-width: 1024px;
+  }
+
   a {
     color: $Poseidon-2-hex;
     color: $fun-summer-woman-3-hex;
@@ -101,7 +109,7 @@ body * {
 
   h2 {
     font-family: "industry", sans-serif;
-    font-size: 2.3rem;
+    font-size: 2rem;
     font-weight: 600;
     font-style: normal;
   }
@@ -126,6 +134,11 @@ body * {
     p {
       font-size: 1.1rem;
     }
+
+    li {
+      font-size: 1.1rem;
+      font-weight: 300;
+    }
   }
 
   time {
@@ -133,45 +146,42 @@ body * {
   }
 }
 
-.home-header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-
-  @include bp("medium") {
+.container {
+  .home-header {
     display: grid;
     grid-template-columns: 1fr 33.33333%;
     gap: 1.5rem;
-  }
 
-  h1 {
-    padding-bottom: 4px;
+    h1 {
+      padding-bottom: 4px;
 
-    @include bp("xsmall") {
-      //   font-size: 2rem;
+      @include bp("xsmall") {
+        //   font-size: 2rem;
+      }
+
+      @include bp("small") {
+        font-size: 2.3rem;
+      }
+
+      @include bp("medium") {
+        padding: 0;
+        margin-left: -9px;
+        font-size: 3.3rem;
+        text-align: center;
+      }
+
+      @include bp("large") {
+        padding: 0;
+        font-size: 4.2rem;
+        text-align: center;
+      }
     }
 
-    @include bp("small") {
-      font-size: 2.3rem;
-    }
-
-    @include bp("medium") {
-      padding: 0;
-      margin-left: -9px;
-      font-size: 3.3rem;
-      text-align: center;
-    }
-
-    @include bp("large") {
-      padding: 0;
-      font-size: 4.2rem;
-      text-align: center;
-    }
-  }
-
-  h4 {
-    @include bp("medium") {
-      // padding-bottom: 7px;
+    h4 {
+      max-width: 240px;
+      @include bp("medium") {
+        // padding-bottom: 7px;
+      }
     }
   }
 }
@@ -182,10 +192,17 @@ body * {
   }
 }
 
-.more-stories {
-  &__post {
-    .post__time-date {
-      margin-bottom: 0.5rem;
+.container {
+  .more-stories {
+    &__post {
+      .post__time-date {
+        margin-bottom: 0.5rem;
+      }
+    }
+
+    &__grid {
+      column-gap: 4rem;
+      row-gap: 4rem;
     }
   }
 }
@@ -320,7 +337,7 @@ body * {
 }
 
 .copy-url-element {
-  position: relative
+  position: relative;
 }
 
 .copy__msg {
